--- a/public/home.html
+++ b/public/home.html
@@ -38,6 +38,7 @@
             <div class="row">
                 <div class="col s12 center">
                     <a id = "generate_button" class="waves-effect waves-light btn-large pink darken-2" style = "font-weight: bold;">Generate</a>
+                    <a id = "copy_button" class="waves-effect waves-light btn-large pink darken-2" style = "font-weight: bold;">Copy</a>
                 </div>
             </div>
 
